[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_main"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "MEND"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 140.0
offset_right = 200.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "A Victorian Horror"
horizontal_alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="MainButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="MainButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="MainButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Exit"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SettingsTitle" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Master"

[node name="HSlider" type="HSlider" parent="SettingsPanel/MarginContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="ValueLabel" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolume" type="HBoxContainer" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Music"

[node name="HSlider" type="HSlider" parent="SettingsPanel/MarginContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="ValueLabel" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="SFXVolume" type="HBoxContainer" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Sounds"

[node name="HSlider" type="HSlider" parent="SettingsPanel/MarginContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="ValueLabel" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="Separator2" type="HSeparator" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MainButtons/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/ExitButton" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="SettingsPanel/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
